--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#" class="logo">Arka Bhattacharjee</a>
                     <nav class="nav">
                     
-                        <a href="#home">Home</a>
+                        <a href="#" class="active">Home</a>
                         <a href="#about">About</a>
                         <a href="#services">Services</a>
                         <a href="#skills">Skills</a>
@@ -22,5 +22,17 @@
             </nav>
 
     </header>
+    <section class="home">
+        <div class="home-content">
+            <h1>Hi, I'm Arka Bhattacharjee</h1>
+            <h3>ML Developer</h3>
+            <p>I am a passionate Machine Learning Engineer and a final-year student pursuing a Bachelor's in Computer Science and Engineering. My academic journey integrates diverse fields such as IoT, Cybersecurity, and Blockchain Technology, allowing me to approach problem-solving with a multi-disciplinary mindset. With hands-on experience in designing intelligent systems, I specialize in developing machine learning models and solutions that optimize real-world applications. I'm always eager to explore the latest advancements in technology and apply them to create impactful, secure, and scalable solutions.</p>
+            <div class="btn-box">
+                <a href="#">Hire Me</a>
+                <a href="#">Let's Talk </a>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
