--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         
-        <a href="#" class="logo">Arka Bhattacharjee</a>
+        <a href="#" class="logo">ArkaB.</a>
                     <nav class="nav">
                     
                         <a href="#" class="active">Home</a>
@@ -39,6 +39,7 @@
             <a href="#"><i class='bx bxl-twitter' ></i></a>
             <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
         </div>
+        <span class="home-imgHover"></span>
     </section>
 </body>
 </html>
